--- a/translator/translator/translator.Web.Entry/appsettings.json
+++ b/translator/translator/translator.Web.Entry/appsettings.json
@@ -12,5 +12,12 @@
     "Version": "1.0.0",
     "Company": ""
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TranslatorConnectionString": "Server=(local);Database=Translator;User=User;Password=Password;MultipleActiveResultSets=True;"
+  },
+  "TXSecret": {
+    "Id": "AKIDnUzFG2bw2t2wb0DDyUlnbFjNo213rQkp",
+    "Key": "xiHeplSuzpQmxxiEUVIp7ZopcCXdU6Wj"
+  }
 }
