--- a/translator/translator/translator.EntityFramework.Core/translator.EntityFramework.Core.csproj
+++ b/translator/translator/translator.EntityFramework.Core/translator.EntityFramework.Core.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
     <PackageReference Include="TencentCloudSDK" Version="3.0.577" />
   </ItemGroup>
 
