--- a/translator/translator/translator.Web.Entry/appsettings.json
+++ b/translator/translator/translator.Web.Entry/appsettings.json
@@ -17,7 +17,7 @@
     "TranslatorConnectionString": "Server=(local);Database=Translator;User=User;Password=Password;MultipleActiveResultSets=True;"
   },
   "TXSecret": {
-    "Id": "AKIDnUzFG2bw2t2wb0DDyUlnbFjNo213rQkp",
-    "Key": "xiHeplSuzpQmxxiEUVIp7ZopcCXdU6Wj"
+    "Id": "腾讯云Id",
+    "Key": "腾讯云Key"
   }
 }
